--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -40,14 +40,14 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu"
+        style="@style/Widget.AppTheme.MenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_menu"
         android:padding="@dimen/common_spacing"
-        android:src="@drawable/baseline_more_vert_24"
+        app:icon="@drawable/ic_more_vert_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,68 +67,43 @@
         app:layout_constraintTop_toBottomOf="@id/barrier"
         tools:text="@sample/posts.json/data/content" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/like"
+        style="@style/Widget.AppTheme.LikeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:checkable="true"
         android:contentDescription="@string/description_favorite"
         android:padding="@dimen/common_spacing"
-        android:src="@drawable/outline_favorite_24"
+        android:text="10"
+        app:icon="@drawable/ic_like_selector"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
-    <TextView
-        android:id="@+id/count_likes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/like"
-        app:layout_constraintStart_toEndOf="@id/like"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:text="10" />
-
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/send"
+        style="@style/Widget.AppTheme.SendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:background="@android:color/transparent"
         android:contentDescription="@string/description_send"
         android:padding="@dimen/common_spacing"
-        android:src="@drawable/outline_send_24"
-        app:layout_constraintStart_toEndOf="@id/count_likes"
+        android:text="200"
+        app:icon="@drawable/ic_send_24"
+        app:layout_constraintStart_toEndOf="@id/like"
         app:layout_constraintTop_toTopOf="@id/barrier2" />
 
-    <TextView
-        android:id="@+id/count_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/send"
-        app:layout_constraintStart_toEndOf="@id/send"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:text="5" />
-
-    <TextView
-        android:id="@+id/count_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/send"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        tools:text="5,5K" />
-
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/view"
+        style="@style/Widget.AppThemeViewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/description_send"
+        android:contentDescription="@string/view"
         android:padding="@dimen/common_spacing"
-        android:src="@drawable/outline_visibility_24"
-        app:layout_constraintEnd_toStartOf="@id/count_view"
+        android:text="300"
+        app:icon="@drawable/ic_visibility_24"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/barrier2" />
 
     <androidx.constraintlayout.widget.Barrier
