--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,81 +9,82 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/heading_edit_container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="35dp"
         tools:listitem="@layout/card_post" />
 
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/editButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="cansel, heading_edit_container, edit, " />
-
-    <EditText
-        android:id="@+id/content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:hint="@string/content"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:padding="@dimen/common_spacing"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/save"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="" />
-
-
-
-    <ImageView
-        android:id="@+id/cansel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/common_spacing"
-        android:src="@drawable/outline_close_24"
-        app:layout_constraintBottom_toTopOf="@id/save"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:id="@+id/edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/common_spacing"
-        android:src="@drawable/outline_edit_24"
-        app:layout_constraintBottom_toTopOf="@id/content"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/common_spacing"
-        android:src="@drawable/ic_save_24"
+        android:layout_margin="@dimen/common_spacing"
+        android:contentDescription="@string/add_post"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <FrameLayout
-        android:id="@+id/heading_edit_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/edit"
-        app:layout_constraintStart_toEndOf="@id/edit"
-        app:layout_constraintTop_toTopOf="@id/edit">
-
-        <TextView
-            android:id="@+id/heading_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/common_spacing"
-            android:text="Edit message"
-            android:visibility="visible" />
-    </FrameLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--<ImageView-->
+<!--android:id="@+id/edit"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:padding="@dimen/common_spacing"-->
+<!--android:src="@drawable/outline_edit_24"-->
+<!--app:layout_constraintBottom_toTopOf="@id/content"-->
+<!--app:layout_constraintStart_toStartOf="parent" />-->
+
+    <!--    <androidx.constraintlayout.widget.Group-->
+    <!--        android:id="@+id/editButton1"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:visibility="gone"-->
+    <!--        app:constraint_referenced_ids="cansel, heading_edit_container, edit, " />-->
+
+    <!--    <EditText-->
+    <!--        android:id="@+id/content"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:hint="@string/content"-->
+    <!--        android:importantForAutofill="no"-->
+    <!--        android:inputType="text"-->
+    <!--        android:padding="@dimen/common_spacing"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toStartOf="@id/save"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        tools:text="" />-->
+
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/cansel"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:padding="@dimen/common_spacing"-->
+    <!--        android:src="@drawable/outline_close_24"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/save"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent" />-->
+
+
+    <!--    <FrameLayout-->
+    <!--        android:id="@+id/heading_edit_container"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        app:layout_constraintBottom_toBottomOf="@id/edit"-->
+    <!--        app:layout_constraintStart_toEndOf="@id/edit"-->
+    <!--        app:layout_constraintTop_toTopOf="@id/edit">-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/heading_edit"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:padding="@dimen/common_spacing"-->
+    <!--            android:text="Edit message"-->
+    <!--            android:visibility="visible" />-->
+    <!--    </FrameLayout>-->
+
