--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -73,7 +73,7 @@
         android:layout_height="250dp"
         android:clickable="true"
         android:focusable="true"
-        android:visibility="visible"
+        android:visibility="gone"
         android:background="?attr/selectableItemBackground"
         app:layout_constraintTop_toBottomOf="@id/content"
         app:layout_constraintStart_toStartOf="parent">
@@ -84,7 +84,7 @@
             android:layout_height="250dp"
             android:src="@drawable/video"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/play"
@@ -97,7 +97,6 @@
             android:contentDescription="@string/play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/video"
             app:srcCompat="@drawable/ic_play_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
