--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,7 +5,7 @@
     android:id="@+id/post_single"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.PostFragment">
+    tools:context=".activity.PostFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
