--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/feedFragment"
-        android:name="ru.netology.nmedia_practice.fragment.FeedFragment"
+        android:name="ru.netology.nmedia_practice.activity.FeedFragment"
         android:label="fragment_feed"
         tools:layout="@layout/fragment_feed" >
         <action
             android:id="@+id/action_feedFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
         <action
-            android:id="@+id/action_feedFragment_to_editPostFragment"
+            android:id="@+id/action_feedFragment_to_PostFragment"
             app:destination="@id/PostFragment" />
     </fragment>
     <fragment
         android:id="@+id/newPostFragment"
-        android:name="ru.netology.nmedia_practice.fragment.NewPostFragment"
+        android:name="ru.netology.nmedia_practice.activity.NewPostFragment"
         android:label="fragment_new_post"
         tools:layout="@layout/fragment_new_post" />
     <fragment
         android:id="@+id/PostFragment"
-        android:name="ru.netology.nmedia_practice.fragment.PostFragment"
+        android:name="ru.netology.nmedia_practice.activity.PostFragment"
         android:label="fragment_post"
         tools:layout="@layout/fragment_post" >
 
@@ -32,7 +32,7 @@
             android:name="postId"
             app:argType="long"/>
         <action
-            android:id="@+id/action_editPostFragment_to_newPostFragment"
+            android:id="@+id/action_PostFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
     </fragment>
 </navigation>
